--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=482b8cfa03dc8ee40fbea9e03f9c9e30
+APP_URL=http::/enox.api
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
